--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,109 +1,23 @@
-body{
-    font-family: 'DM Mono', monospace;
-    overflow-y: scroll;
-    overflow-x: scroll;
-}
-.navbar-brand{
-    font-family: 'Comic Neue', cursive;
-    font-size: 30px;
-}
-
-.container .card .h{
-    max-height: 260px;
-}
-
-.input-border{
-    border: 1px solid #d9d9d9;
-    border-radius: 5px;
-}
-
-.form-elegant .font-small {
-    font-size: 0.8rem;
-}
-
-.form-elegant .z-depth-1a {
-    -webkit-box-shadow: 0 2px 5px 0 rgba(55, 161, 255, 0.26), 0 4px 12px 0 rgba(121, 155, 254, 0.25);
-    box-shadow: 0 2px 5px 0 rgba(55, 161, 255, 0.26), 0 4px 12px 0 rgba(121, 155, 254, 0.25);
-}
-
-.form-elegant .z-depth-1-half,
-.form-elegant .btn:hover {
-    -webkit-box-shadow: 0 5px 11px 0 rgba(85, 182, 255, 0.28), 0 4px 15px 0 rgba(36, 133, 255, 0.15);
-    box-shadow: 0 5px 11px 0 rgba(85, 182, 255, 0.28), 0 4px 15px 0 rgba(36, 133, 255, 0.15);
-}
-
-.form-elegant{
-    max-height: 1366px;
-    overflow-y: scroll;
-}
-
-.scrollbar-light-blue::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #F5F5F5;
-    border-radius: 10px;
-}
-
-.scrollbar-light-blue::-webkit-scrollbar {
-    width: 9px;
-    background-color: #F5F5F5;
-}
-
-.scrollbar-light-blue::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #4285F4;
-}
-
-.scrollbar-light-blue {
-    scrollbar-color: #4285F4 #F5F5F5;
-}
-
-.square::-webkit-scrollbar-track {
-    border-radius: 0 !important;
-}
-
-.square::-webkit-scrollbar-thumb {
-    border-radius: 0 !important;
-}
-.hidden-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
-  
-
-
-
-
+body{font-family: 'DM Mono', monospace; overflow-y: scroll; overflow-x: hidden;background-color: #f0f0f0;}
+.navbar-brand{font-family: 'Comic Neue', cursive; font-size: 30px; }
+.input-border{border: 1px solid #d9d9d9; border-radius: 5px; }
+#loader{margin-top:30vh;}
+#firStatusContainer{margin-top: 120px;}
+@media only screen and (max-width:374px){.margin-top{margin-top: 110px;}.position{position: fixed;top: 40%;z-index: 9;}}
+@media only screen and (min-width:375px) and (min-height:706px){.margin-top{margin-top: 110px;}.fit-content{width: fit-content;}.position{position: fixed;top: 40%;left: 35%; z-index: 9;}.footer-position{bottom: 0;position:fixed;left: 0;width: 100%;}}
+@media only screen and (min-width:375px) and (max-height:705px){.margin-top{margin-top: 75px;}.fit-content{width: fit-content;}.position{position: fixed;top: 40%;left: 35%; z-index: 9;}.footer-position{bottom: 0;position:fixed;left: 0;width: 100%;}}
+@media only screen and (min-width:768px) and (min-height:640px){.margin-top{margin-top: 100px;}.fit-content{width: fit-content;}.position{position: fixed;top: 40%;left: 35%; z-index: 9;}.footer-position{margin-top: 30px;position: relative;}}
+/* iPAD */
+@media only screen and (min-width:786px) and (min-height:1000px){.margin-top{margin-top: 100px;}.fit-content{width: fit-content;}.position{position: fixed;top: 40%;left: 35%; z-index: 9;}.footer-position{position: fixed;bottom: 0;right: 0;width: 100%;}}
 /* ----------Google fonts---------- */
-
 /* --- font-family: 'DM Mono', monospace; --- */
-
-/* latin-ext */
-@font-face {
-    font-family: 'DM Mono';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
+@font-face {font-family: 'DM Mono';font-style: normal;font-weight: 400;font-display: swap;
     src: local('DM Mono Regular'), local('DMMono-Regular'), url(https://fonts.gstatic.com/s/dmmono/v1/aFTU7PB1QTsUX8KYthSQBLyM.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-  }
-  /* latin */
-  @font-face {
-    font-family: 'DM Mono';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;}
+@font-face {font-family: 'DM Mono';font-style: normal;font-weight: 400;font-display: swap;
     src: local('DM Mono Regular'), local('DMMono-Regular'), url(https://fonts.gstatic.com/s/dmmono/v1/aFTU7PB1QTsUX8KYthqQBA.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
-
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}
 /* ---- font-family: 'Comic Neue', cursive; --------*/
-
-  /* latin */
-@font-face {
-    font-family: 'Comic Neue';
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
+@font-face {font-family: 'Comic Neue';font-style: normal;font-weight: 700;font-display: swap;
     src: local('Comic Neue Bold'), local('ComicNeue-Bold'), url(https://fonts.gstatic.com/s/comicneue/v1/4UaErEJDsxBrF37olUeD_xHM8pxULg.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;}
