--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,14 @@
-body{font-family: 'DM Mono', monospace; overflow-y: scroll; overflow-x: hidden;background-color: #f0f0f0;}
-.navbar-brand{font-family: 'Comic Neue', cursive; font-size: 30px; }
+body{font-family: 'DM Mono', monospace; overflow-y: scroll; overflow-x: hidden;background-image: url("../img/circle.png");}
+.navbar-brand{font-size: 30px; }
 .input-border{border: 1px solid #d9d9d9; border-radius: 5px; }
 #loader{margin-top:30vh;}
 #firStatusContainer{margin-top: 120px;}
+.card-h{
+    height: 25rem;
+}
 /* .form-control:valid{color:yellowgreen} */
 /* .form-control:invalid{color:orangered} */
-@media only screen and (max-width:374px){.margin-top{margin-top: 60px;}.position{position: fixed;top: 40%;z-index: 9;}}
+@media only screen and (max-width:374px){.margin-top{margin-top: 80px;}.position{position: fixed;top: 40%;z-index: 9;}}
 @media only screen and (min-width:375px) and (min-height:706px){.margin-top{margin-top: 110px;}.fit-content{width: fit-content;}.position{position: fixed;top: 40%;left: 35%; z-index: 9;}.footer-position{bottom: 0;position:fixed;left: 0;width: 100%;}}
 @media only screen and (min-width:375px) and (max-height:705px){.margin-top{margin-top: 75px;}.fit-content{width: fit-content;}.position{position: fixed;top: 40%;left: 35%; z-index: 9;}.footer-position{bottom: 0;position:fixed;left: 0;width: 100%;}}
 @media only screen and (min-width:768px) and (min-height:640px){.margin-top{margin-top: 100px;}.fit-content{width: fit-content;}.position{position: fixed;top: 40%;left: 35%; z-index: 9;}.footer-position{margin-top: 30px;position: relative;}}
@@ -15,7 +18,7 @@ body{font-family: 'DM Mono', monospace; overflow-y: scroll; overflow-x: hidden;b
     body,html{
         font-size: 16px;
     }
-    .navbar-brand{font-size: 25px;}
+    .navbar-brand{font-size: 20px;padding: 0; margin: 0;}
 }
 /* ----------Google fonts---------- */
 /* --- font-family: 'DM Mono', monospace; --- */
