--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,23 +3,23 @@ body{font-family: 'DM Mono', monospace; overflow-y: scroll; overflow-x: hidden;b
 .input-border{border: 1px solid #d9d9d9; border-radius: 5px; }
 #loader{margin-top:30vh;}
 #firStatusContainer{margin-top: 120px;}
-.card-h{
-    height: 25rem;
-}
-/* .form-control:valid{color:yellowgreen} */
-/* .form-control:invalid{color:orangered} */
+.card-h{height: 25rem;}
+/* social media */
+.fab{color: white; padding: 8px; border-radius: 9px;}
+.fa-facebook-f{background:#3B5998;}
+.fa-google-plus-g{background: #dd4b39}
+.fa-twitter{background: #55ACEE;}
+.fa-instagram{background: #125688;}
+.fa-linkedin-in{  background: #007bb5;}
+.fa-github{  background: #211f1f;}
+.fa-lg:hover{opacity: 0.7;}
 @media only screen and (max-width:374px){.margin-top{margin-top: 80px;}.position{position: fixed;top: 40%;z-index: 9;}}
 @media only screen and (min-width:375px) and (min-height:706px){.margin-top{margin-top: 110px;}.fit-content{width: fit-content;}.position{position: fixed;top: 40%;left: 35%; z-index: 9;}.footer-position{bottom: 0;position:fixed;left: 0;width: 100%;}}
 @media only screen and (min-width:375px) and (max-height:705px){.margin-top{margin-top: 75px;}.fit-content{width: fit-content;}.position{position: fixed;top: 40%;left: 35%; z-index: 9;}.footer-position{bottom: 0;position:fixed;left: 0;width: 100%;}}
 @media only screen and (min-width:768px) and (min-height:640px){.margin-top{margin-top: 100px;}.fit-content{width: fit-content;}.position{position: fixed;top: 40%;left: 35%; z-index: 9;}.footer-position{margin-top: 30px;position: relative;}}
 /* iPAD */
 @media only screen and (min-width:786px) and (min-height:1000px){.margin-top{margin-top: 100px;}.fit-content{width: fit-content;}.position{position: fixed;top: 40%;left: 35%; z-index: 9;}.footer-position{position: fixed;bottom: 0;right: 0;width: 100%;}}
-@media only screen and (max-width:411px){
-    body,html{
-        font-size: 16px;
-    }
-    .navbar-brand{font-size: 20px;padding: 0; margin: 0;}
-}
+@media only screen and (max-width:411px){ body,html{ font-size: 16px; } .navbar-brand{ font-size: 20px;padding: 0; margin: 0; } }
 /* ----------Google fonts---------- */
 /* --- font-family: 'DM Mono', monospace; --- */
 @font-face {font-family: 'DM Mono';font-style: normal;font-weight: 400;font-display: swap;
