--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,222 +1,188 @@
-.primary-color{
-    background-color:#4285F4;
+.primary-color {
+  background-color: #4285f4;
 }
-.primary-color-dark{
-    background-color:#0d47a1;
+.primary-color-dark {
+  background-color: #0d47a1;
 }
-.footer-lite{
-    background-color:#484e53;
+.footer-lite {
+  background-color: #484e53;
 }
-.footer-dark{
-    background-color:#343a40;
+.footer-dark {
+  background-color: #343a40;
 }
-.bg-f4f4f4{
-    background-color: #f4f4f4;
+.bg-f4f4f4 {
+  background-color: #f4f4f4;
 }
-.link{
-    color: #4285f4;
-    cursor: pointer;
+.link {
+  color: #4285f4;
+  cursor: pointer;
 }
-/* 
-.modal{
-width: 400px;
-} */
-.mw-400{max-width: 400px;}
+button.navbar-toggler {
+  outline: none;
+  color: white;
+  border: none;
+}
+
+.mw-400 {
+  max-width: 400px;
+}
 
 .social-icon {
-    font-size: 20px;
-    
-    /* width: 100%;
+  font-size: 20px;
+
+  /* width: 100%;
     height: 100%; */
-    /* padding: 10px 10px; */
-  }
+  /* padding: 10px 10px; */
+}
 
 footer {
   width: 100%;
   /* background-color: rgb(32, 32, 32); */
   color: white;
 }
-footer a{
-    text-decoration: none !important;
-    color: white;
+footer a {
+  text-decoration: none !important;
+  color: white;
 }
 /* .form-control{
     border: 0px;
     border-bottom: 1px solid black;
     border-radius: 0px;
 } */
-textarea:focus, 
-textarea.form-control:focus, 
-input.form-control:focus, 
-input[type=text]:focus, 
-input[type=password]:focus, 
-input[type=email]:focus, 
-input[type=number]:focus, 
-[type=text].form-control:focus, 
-[type=password].form-control:focus, 
-[type=email].form-control:focus, 
-[type=tel].form-control:focus, 
+textarea:focus,
+textarea.form-control:focus,
+input.form-control:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+input[type="number"]:focus,
+[type="text"].form-control:focus,
+[type="password"].form-control:focus,
+[type="email"].form-control:focus,
+[type="tel"].form-control:focus,
 [contenteditable].form-control:focus {
   box-shadow: inset 0 -1px 0 blue;
 }
 
 /* old */
 body {
-    font-family: 'DM Mono', monospace;
-    overflow-y: scroll;
-    overflow-x: hidden;
+  font-family: "DM Mono", monospace;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .navbar-brand {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 /* .input-border{border: 1px solid #d9d9d9; border-radius: 5px; } */
 
 #loader {
-    margin-top: 30vh;
+  margin-top: 30vh;
 }
-
-
-/* .card-h{height: 25rem;} */
-
-/* social media */
-
-/* .fab {
-    color: white;
-    padding: 8px;
-    border-radius: 9px;
-}
-
-.fa-facebook-f {
-    background: #3B5998;
-}
-
-.fa-google-plus-g {
-    background: #dd4b39
-}
-
-.fa-twitter {
-    background: #55ACEE;
-}
-
-.fa-instagram {
-    background: #125688;
-}
-
-.fa-linkedin-in {
-    background: #007bb5;
-}
-
-.fa-github {
-    background: #211f1f;
-}
-
-.fa-lg:hover {
-    opacity: 0.7;
-} */
 
 .fit-content {
-    width: fit-content;
+  width: fit-content;
 }
 
 #footer {
-    width: 100%;
+  width: 100%;
 }
 
-@media only screen and (max-width:374px) {
-    .margin-top {
-        margin-top: 80px;
-    }
-    .position {
-        position: fixed;
-        top: 40%;
-        z-index: 9;
-    }
+@media only screen and (max-width: 374px) {
+  .margin-top {
+    margin-top: 80px;
+  }
+  .position {
+    position: fixed;
+    top: 40%;
+    z-index: 9;
+  }
 }
 
-@media only screen and (min-width:375px) and (min-height:706px) {
-    .margin-top {
-        margin-top: 110px;
-    }
-    .position {
-        position: fixed;
-        top: 40%;
-        left: 35%;
-        z-index: 9;
-    }
-    .footer-position {
-        bottom: 0;
-        position: fixed;
-        left: 0;
-    }
+@media only screen and (min-width: 375px) and (min-height: 706px) {
+  .margin-top {
+    margin-top: 110px;
+  }
+  .position {
+    position: fixed;
+    top: 40%;
+    left: 35%;
+    z-index: 9;
+  }
+  .footer-position {
+    bottom: 0;
+    position: fixed;
+    left: 0;
+  }
 }
 
-@media only screen and (min-width:375px) and (max-height:705px) {
-    .margin-top {
-        margin-top: 75px;
-    }
-    .position {
-        position: fixed;
-        top: 40%;
-        left: 35%;
-        z-index: 9;
-    }
-    .footer-position {
-        bottom: 0;
-        position: fixed;
-        left: 0;
-    }
+@media only screen and (min-width: 375px) and (max-height: 705px) {
+  .margin-top {
+    margin-top: 75px;
+  }
+  .position {
+    position: fixed;
+    top: 40%;
+    left: 35%;
+    z-index: 9;
+  }
+  .footer-position {
+    bottom: 0;
+    position: fixed;
+    left: 0;
+  }
 }
 
-@media only screen and (min-width:768px) and (min-height:640px) {
-    .margin-top {
-        margin-top: 100px;
-    }
-    .position {
-        position: fixed;
-        top: 40%;
-        left: 35%;
-        z-index: 9;
-    }
-    .footer-position {
-        margin-top: 30px;
-        position: relative;
-    }
+@media only screen and (min-width: 768px) and (min-height: 640px) {
+  .margin-top {
+    margin-top: 100px;
+  }
+  .position {
+    position: fixed;
+    top: 40%;
+    left: 35%;
+    z-index: 9;
+  }
+  .footer-position {
+    margin-top: 30px;
+    position: relative;
+  }
 }
 
 /* iPAD */
 
-@media only screen and (min-width:786px) and (min-height:1000px) {
-    .margin-top {
-        margin-top: 100px;
-    }
-    .position {
-        position: fixed;
-        top: 40%;
-        left: 35%;
-        z-index: 9;
-    }
-    .footer-position {
-        position: fixed;
-        bottom: 0;
-        right: 0;
-    }
+@media only screen and (min-width: 786px) and (min-height: 1000px) {
+  .margin-top {
+    margin-top: 100px;
+  }
+  .position {
+    position: fixed;
+    top: 40%;
+    left: 35%;
+    z-index: 9;
+  }
+  .footer-position {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+  }
 }
 
-@media only screen and (max-width:411px) {
-    body, html {
-        font-size: 16px;
-    }
-    .navbar-brand {
-        font-size: 20px;
-        padding: 0;
-        margin: 0;
-    }
+@media only screen and (max-width: 411px) {
+  body,
+  html {
+    font-size: 16px;
+  }
+  .navbar-brand {
+    font-size: 20px;
+    padding: 0;
+    margin: 0;
+  }
 }
 
-@media(min-width:992px) {
-    /* .cover {
+@media (min-width: 992px) {
+  /* .cover {
         width: 100%;
         max-height: 500px;
     } */
@@ -227,36 +193,47 @@ body {
 /* --- font-family: 'DM Mono', monospace; --- */
 
 @font-face {
-    font-family: 'DM Mono';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('DM Mono Regular'), local('DMMono-Regular'), url(https://fonts.gstatic.com/s/dmmono/v1/aFTU7PB1QTsUX8KYthSQBLyM.woff2) format('woff2');
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  font-family: "DM Mono";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local("DM Mono Regular"), local("DMMono-Regular"),
+    url(https://fonts.gstatic.com/s/dmmono/v1/aFTU7PB1QTsUX8KYthSQBLyM.woff2)
+      format("woff2");
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
+    U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
 @font-face {
-    font-family: 'DM Mono';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: local('DM Mono Regular'), local('DMMono-Regular'), url(https://fonts.gstatic.com/s/dmmono/v1/aFTU7PB1QTsUX8KYthqQBA.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  font-family: "DM Mono";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local("DM Mono Regular"), local("DMMono-Regular"),
+    url(https://fonts.gstatic.com/s/dmmono/v1/aFTU7PB1QTsUX8KYthqQBA.woff2)
+      format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 }
 
 /* ---- font-family: 'Comic Neue', cursive; --------*/
 
 @font-face {
-    font-family: 'Comic Neue';
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: local('Comic Neue Bold'), local('ComicNeue-Bold'), url(https://fonts.gstatic.com/s/comicneue/v1/4UaErEJDsxBrF37olUeD_xHM8pxULg.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  font-family: "Comic Neue";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: local("Comic Neue Bold"), local("ComicNeue-Bold"),
+    url(https://fonts.gstatic.com/s/comicneue/v1/4UaErEJDsxBrF37olUeD_xHM8pxULg.woff2)
+      format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 }
-#fir-status p{
-    margin-top: 20px;
-    background-color: gray;
-    border: 1px solid black;
-    border-radius: 10px;
+#fir-status p {
+  margin-top: 20px;
+  background-color: gray;
+  border: 1px solid black;
+  border-radius: 10px;
 }
