--- a/client/src/css/vps-chat.css
+++ b/client/src/css/vps-chat.css
@@ -37,16 +37,16 @@ body {
 
 .received {
     background-color: #a0c2fa;
-    border-radius: 0.5rem;
+    border-radius: 0.5rem 1rem 1rem 1rem;
 }
 
 .sent {
     background-color: #ededed;  
-    border-radius: 0.5rem;          
+    border-radius:1rem 1rem 0.5rem 1rem;          
 }
 
 .message-content {
-    padding: 5px 15px 5px 15px;
+    padding: 15px 15px;
     font-size: 15px;        
 }
 
