--- a/client/src/css/vps-chat.css
+++ b/client/src/css/vps-chat.css
@@ -1,64 +1,76 @@
 body,
 html {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f0f0f0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f0f0f0;
 }
 
 .profile-pic {
-    height: 35px;
-    width: 35px;
+  height: 35px;
+  width: 35px;
 }
 
 .name {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .under-name {
-    font-size: 12px;
-    line-height: 15px;
-    max-height: 15px;
+  font-size: 12px;
+  line-height: 15px;
+  max-height: 15px;
 }
 
 .chat-pic {
-    height: 38px;
-    width: 38px;
+  height: 38px;
+  width: 38px;
 }
-/* 
+/*
 .chatbox {
     height: 50%;
 } */
 
 .received {
-    background-color: #a0c2fa;
-    border-radius: 0.5rem 1rem 1rem 1rem;
+  background-color: #a0c2fa;
+  border-radius: 0.1rem 1rem 1rem 1rem;
 }
 
 .sent {
-    background-color: #ededed;  
-    border-radius:1rem 1rem 0.5rem 1rem;          
+  background-color: #ededed;
+  border-radius: 1rem 1rem 0.1rem 1rem;
 }
 
 .message-content {
-    padding: 15px 15px;
-    font-size: 15px;        
+  padding: 15px 15px;
+  font-size: 15px;
 }
 
 .chat-card {
-    height: 86vh;
+  height: 86vh;
 }
 
 #messages {
-    /* overflow-y: scroll; */
-    overflow-x: hidden;
+  /* overflow-y: scroll; */
+  overflow-x: hidden;
 }
 
 #userName {
-    font-size: 20px;
+  font-size: 20px;
+}
+#send-arrow {
+  color: #343a40;
+  font-size: 32px;
+}
+#paper-clip {
+  color: #343a40;
+  font-size: 25px;
+}
+#send-arrow,
+#paper-clip {
+  cursor: pointer;
 }
