--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -231,9 +231,11 @@ body {
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
     U+FEFF, U+FFFD;
 }
-#fir-status p {
-  margin-top: 20px;
-  background-color: gray;
-  border: 1px solid black;
-  border-radius: 10px;
+.nav-link {
+  font-weight: 500;
+  font-size: 18px;
+  color: black !important;
+}
+.nav-link:hover {
+  color: gray !important;
 }
