--- a/client/src/css/vps-chat.css
+++ b/client/src/css/vps-chat.css
@@ -8,7 +8,7 @@ html {
 
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f0f0f0;
+  /* background-color: #f0f0f0; */
 }
 
 .profile-pic {
