--- a/admin/src/css/style.css
+++ b/admin/src/css/style.css
@@ -294,3 +294,28 @@ body {
   max-height: 260px;
   object-fit: contain;
 }
+/* loader */
+.loader {
+  position: relative;
+  margin-top: 20vh;
+  margin-bottom: 20vh;
+  top: calc(50% - 4em);
+  left: calc(50% - 3em);
+  width: 6em;
+  height: 6em;
+  border: 0.8em solid rgba(47, 54, 83, 0.2);
+  border-left: 0.8em solid #2f3653;
+  border-radius: 50%;
+  animation: load 1.1s infinite linear;
+  transition: opacity 0.3s;
+}
+
+@keyframes load {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
