Admin: bug fixes, added character certificate, noc, Client: noc, bug fixes

--- a/admin/src/css/vps-chat.css
+++ b/admin/src/css/vps-chat.css
@@ -71,3 +71,10 @@ body {
   cursor: pointer;
   color: #2f3653;
 }
+#list-container {
+  max-height: 529px;
+  overflow-y: hidden;
+}
+#user-list {
+  overflow-y: scroll;
+}
